src/objects/VKW__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>VKWs</relationshipLabel>
        <relationshipName>VKWs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>VKWs</relationshipLabel>
        <relationshipName>VKWs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Recruited</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>VKW</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VKW-{00000}</displayFormat>
        <label>VKW ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VKWs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>